--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <h1><img src="/style/assets/Logo (2).svg" alt="Logo da Alura"></h1>
     </div>
 
-    <!-- <form>
-        <input name="name" autocomplete="off" required />
-        <label for="name">
-          <span>Name</span>
-        </label>
-    </form> -->
-    
-    <h2>Digite seu texto</h2>
+  <form>
+    <div>
+      <input
+        type="text"
+        placeholder="Digite seu texto"
+        size="30" />
+    </div>
+  </form>
 
     <!-- <div class="direita">
         <img src="/style/assets/High quality products 1 1.svg" alt="">
