--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="button-box">
               <button onclick="codificar()" class="btn btn-encrypt">Criptografar</button>
-              <button class="btn btn-decrypt">Descriptografar</button>
+              <button onclick="decodificar()" class="btn btn-decrypt">Descriptografar</button>
             </div>
           </div>
         </div>
