--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="/assets/images/logo-alura.svg.svg"
+      href="assets/images/logo-alura.svg.svg"
       type="image/x-icon"
     />
     <title>Decodificador | Challenge ONE</title>
-    <link rel="stylesheet" href="/assets/css/variables.css" />
-    <link rel="stylesheet" href="/assets/css/reset-meyer.css" />
-    <link rel="stylesheet" href="/assets/css/grid.css" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
-    <link rel="stylesheet" href="/assets/css/media-query.css" />
+    <link rel="stylesheet" href="assets/css/variables.css" />
+    <link rel="stylesheet" href="assets/css/reset-meyer.css" />
+    <link rel="stylesheet" href="assets/css/grid.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/media-query.css" />
   </head>
   <body>
     <div class="container">
@@ -24,7 +24,7 @@
             <a href=""
               ><img
                 onclick="location.reload()"
-                src="/assets/images/logo-alura.svg.svg"
+                src="assets/images/logo-alura.svg.svg"
                 alt="Logo Alura"
             /></a>
           </div>
@@ -40,7 +40,7 @@
           <div class="controls">
             <div class="instruction">
               <img
-                src="/assets/images/bi_exclamation-circle-fill.svg"
+                src="assets/images/bi_exclamation-circle-fill.svg"
                 alt="Ícone de exclamação"
               />
               <p>Apenas letras minúsculas e sem acento.</p>
@@ -60,7 +60,7 @@
       <div class="text-output-field">
         <div class="view-default" id="modalInstrucoes">
           <img
-            src="/assets/images/High quality products 1 1.svg"
+            src="assets/images/High quality products 1 1.svg"
             class="illustration"
             alt="Ilustração de uma pessoa verificando um diamante com uma lupa."
           />
@@ -80,6 +80,6 @@
       </div>
     </div>
 
-    <script src="/assets/javascript/main.js"></script>
+    <script src="assets/javascript/main.js"></script>
   </body>
 </html>
