--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="assets/images/logo-alura.svg.svg"
+      href="assets/images/favicon.svg"
       type="image/x-icon"
     />
     <title>Decodificador | Challenge ONE</title>
